--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-10.20MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.48MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.21MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-5.52MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.17MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇨🇳 中国-316.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 以色列-3.36MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40047, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
+  - {name: 🇨🇳 中国-9.73MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.73MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-275.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.80MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.56MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-752.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇸🇬 新加坡-531.2KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.1KB/s(Youtube:不良林)
-      - 以色列-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.1KB/s(Youtube:不良林)
-      - 以色列-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.1KB/s(Youtube:不良林)
-      - 以色列-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.1KB/s(Youtube:不良林)
-      - 以色列-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.1KB/s(Youtube:不良林)
-      - 以色列-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.1KB/s(Youtube:不良林)
-      - 以色列-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-316.1KB/s(Youtube:不良林)
-      - 以色列-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
