--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.73MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.73MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-275.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.80MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.56MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-752.3KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇯🇵 日本-668.2KB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
   - {name: 🇸🇬 新加坡-531.2KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-363.3KB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-773.2KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 172.96.192.100, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇯🇵 日本-1.14MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.65MB/s(Youtube:不良林), server: v2ray1.udpgw.com, port: 443, type: vmess, uuid: b6581737-539e-4b68-b853-e50c291b250d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /howdy, ws-headers: {Host: v2ray1.udpgw.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-275.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-752.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
