--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-668.2KB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: a0fec1fb-e217-344b-84e1-45b412ccd670, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇸🇬 新加坡-531.2KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.15MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-363.3KB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-773.2KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: 172.96.192.100, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
-  - {name: 🇯🇵 日本-1.14MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
   - {name: 🇸🇬 新加坡-1.65MB/s(Youtube:不良林), server: v2ray1.udpgw.com, port: 443, type: vmess, uuid: b6581737-539e-4b68-b853-e50c291b250d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /howdy, ws-headers: {Host: v2ray1.udpgw.com}}
+  - {name: 🇰🇷 韩国-387.3KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-309.5KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-367.8KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-327.2KB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-668.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-531.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-773.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
