--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-12.15MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-363.3KB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇸🇬 新加坡-1.65MB/s(Youtube:不良林), server: v2ray1.udpgw.com, port: 443, type: vmess, uuid: b6581737-539e-4b68-b853-e50c291b250d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /howdy, ws-headers: {Host: v2ray1.udpgw.com}}
-  - {name: 🇰🇷 韩国-387.3KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-309.5KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-367.8KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-327.2KB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-656.2KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
+  - {name: 🇨🇳 中国-8.20MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-9.64MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.20MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.44MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-3.17MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-412.0KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-644.0KB/s(Youtube:不良林), server: v2ray1.udpgw.com, port: 443, type: vmess, uuid: b6581737-539e-4b68-b853-e50c291b250d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /howdy, ws-headers: {Host: v2ray1.udpgw.com}}
+  - {name: 🇨🇳 中国-4.16MB/s(Youtube:不良林), server: 120.241.236.93, port: 46061, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-656.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-412.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-644.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-656.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-412.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-644.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-656.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-412.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-644.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-656.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-412.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-644.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-656.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-412.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-644.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-656.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-412.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-644.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-12.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-857.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.65MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-387.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-309.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-327.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-656.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-9.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.44MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-412.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-644.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
